Fixed text rotation on iOS Safari

--- a/alisson.css
+++ b/alisson.css
@@ -39,13 +39,8 @@ img.fillframe {
   }
 }
 
-.username-text {
-  animation-name: spin;
-  animation-duration: 10s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  /*Nathan's solution*/
-  transform-origin: 50% 50%;
+#rotating-text {
+  animation: 10s spin infinite linear;
 }
 
 img.background {
